<resources>
    <string name="app_name">Duel with English</string>
    <string name="lessons_vocabulary_list_name">Słownictwo</string>
    <string name="action_settings">Settings</string>
    <string name="button_vocabulary_text">Słownictwo</string>
    <string name="settings_menu">Ustawienia</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="title_activity_lessons_vocabulary_list">LessonsVocabularyList</string>
    <string name="lesson_english_column">Po angielsku</string>
    <string name="lesson_polish_column">Po polsku</string>
    <string name="lessons_favourites_column">Fav.</string>
    <string name="add_words_to_favourite">Dodaj do ulubionych</string>
    <string name="favourite_star_content_description">Gwiazda - dodaję opcję tworzenia listy ulubionych słów</string>
    <string name="favourite_main_button">Lista ulubionych</string>
    <string name="title_activity_favourite_list">FavouriteList</string>
    <string name="favourite_list_label_text">Ulubione</string>
    <string name="back_option_menu">Cofnij</string>
    <string name="expandable_activity_label">Poziom języka</string>
    <string name="levelVocabularyImage">Ikonka - pokazujepoziom danej kategorii</string>
    <string name="about_author_button_text">O autorze</string>
    <string name="author_information_activity_label">Informacje o autorze</string>
    <string name="list_of_favourite_menu_item">Lista Ulubionych</string>
    <string name="up_favourite_menu">W górę</string>
    <string name="mainMenuSubtitle">Menu główne</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mainMenuTestButton">Test</string>
    <string name="title_activity_vocabulary_test">Ustawienia testu</string>
    <string name="title_activity_author_info">Informacje o autorze</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <!--VocabularyTestPreference-->
    <string name="start_test_button">Uruchom test</string>
    <string name="personalization_test">Personalizacja testu</string>
    <string name="customize_vocabulary_test">Personalizacja testu</string>

    <!--Vocabulary test fragments-->
    <string name="vocabulary_test_write_check_answer">Sprawdź</string>
    <string name="test_write_et_hint">Tutaj wpisz słowo</string>
    <string name="test_choice_en_hint">Przetłumacz poniższe słowo na język angielski klikając w poprawne tłumaczenie:</string>
    <string name="test_choice_pl_hint">Przetłumacz poniższe słowo na język polski klikając w poprawne tłumaczenie:</string>
    <string name="test_write_en_hint">Przetłumacz na język angielski słowo wpisując je w poniższym polu: </string>
    <string name="test_write_pl_hint">Przetłumacz na język polski słowo wpisując je w poniższym polu: </string>
    <string name="test_jigsaw_word_pl_hint">Przetłumacz poniższe słowo na język polski, układając je z rozsypanych liter:</string>
    <string name="test_jigsaw_word_en_hint">Przetłumacz poniższe słowo na język angielski, układając je z rozsypanych liter:</string>
    <string name="jigsaw_fragment_check_button">Sprawdź</string>
    <string name="Test">Test</string>
    <string name="vocabulary_category_a1_text">A1</string>
    <string name="vocabulary_category_a2_text">A2</string>
    <string name="vocabulary_category_b1_text">B1</string>
    <string name="vocabulary_category_b2_text">B2</string>
    <string name="vocabulary_category_c1_text">C1</string>
    <string name="vocabulary_category_c2_text">C2</string>
    <string name="logo_description">Logo aplikacji</string>
    <string name="title_description">Nazwa aplikacji - Duel with English</string>
    <string name="title_activity_lessons_vocabulary_list2">LessonsVocabularyList2</string>
    <string name="rate_app_text">Oceń aplikację</string>
    <string name="send_email_to_author">Napisz do mnie</string>
    <string name="author_info_who_made">Aplikacja stworzona przez: \nBartłomiej Krasicki</string>
    <string name="rate_app_btton_description">Ikona gwiazdki na przycisku oceń aplikację</string>
    <string name="sort">Sortuj</string>
    <string name="a1_lvl">Poziom A1</string>
    <string name="a2_lvl">Poziom A2</string>
    <string name="b1_lvl">Poziom B1</string>
    <string name="b2_lvl">Poziom B2</string>
    <string name="c1_lvl">Poziom C1</string>
    <string name="c2_lvl">Poziom C2</string>
    <string name="show_only">Pokaż wszystkie</string>
    <string name="personalize_test">Personalizuj</string>
    <string name="close">Zamknij</string>
    <string name="grammar">Gramatyka</string>
    <string name="tenses_list_activity_label">Wybierz temat</string>
    <string name="fav_bar_button_delete">Usuń z listy</string>
    <string name="category_learn_progress">Ikona postępu nauki danej kategorii</string>
    <string name="search_hint">Wyszukaj słowo wpisując je tutaj</string>
    <string name="translator">Słownik</string>
    <string name="dictionary_activity_label">Wyszukaj słowa</string>
</resources>
