<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/LessonMenuSortIcon"
        android:checkable="false"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/goToFavouriteFromMenu"
        android:icon="?android:attr/actionModePasteDrawable"
        android:title="@string/list_of_favourite_menu_item"
        app:showAsAction="always" />

    <item android:title="@string/add_words_to_favourite"
        android:icon="@android:drawable/btn_star_big_on"
        app:showAsAction="ifRoom"
        android:id="@+id/addToFavouriteWordsStar" />


</menu>
