<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_vocabularycategory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_vocabulary_category">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="vertical">

        <at.markushi.ui.CircleButton
            android:id="@+id/button_category_A1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_weight="1"
            app:cb_color="@color/colorAccent"
            android:onClick="categoryButtonOnClick"
            android:text="@string/vocabulary_category_a1_text" />

        <at.markushi.ui.CircleButton
            android:id="@+id/button_category_A2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_weight="1"
            android:onClick="categoryButtonOnClick"
            android:text="@string/vocabulary_category_a2_text" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:layout_weight="1"
        android:orientation="vertical">

        <at.markushi.ui.CircleButton
            android:id="@+id/button_category_B1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_column="0"
            android:onClick="categoryButtonOnClick"
            android:text="@string/vocabulary_category_b1_text" />

        <at.markushi.ui.CircleButton
            android:id="@+id/button_category_B2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_weight="1"
            android:onClick="categoryButtonOnClick"
            android:text="@string/vocabulary_category_b2_text" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:layout_weight="1"
        android:orientation="vertical">

        <at.markushi.ui.CircleButton
            android:id="@+id/button_category_C1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_weight="1"
            android:onClick="categoryButtonOnClick"
            android:text="@string/vocabulary_category_c1_text" />

        <at.markushi.ui.CircleButton
            android:id="@+id/button_category_C2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_weight="1"
            android:onClick="categoryButtonOnClick"
            android:text="@string/vocabulary_category_c2_text" />

    </TableRow>

</TableLayout>