<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="test_fragments.VocabularyTestWriteEnFragment">

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_write_en_hint"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/test_write_en_word"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userWriteWordEnET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_alignParentStart="true"
            android:hint="@string/test_write_et_hint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/testWriteEnCheckButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            style="@style/Button.Custom"
            android:text="@string/vocabulary_test_write_check_answer" />
    </RelativeLayout>

</LinearLayout>
